# jane_api

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: python-publish.yml  python-test.yml
jane_api/: functions.py  model.py
src/jane_api/: functions.py  model.py
tests/: test_functions.py  test_model.py
tests/mocks/: log1.json  log11.json  log12.json  log2.json  log3.json  log4.json  log5.json  log6.json  log7.json  log8.json  log9.json
